# theocourtdotcom

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
.task/checksum/: install
src/theocourtdotcom/: __init__.py  __main__.py
src/theocourtdotcom/templates/: _base.jinja  _components.jinja  index.j2  index.jinja  quote.jinja
vite/: main.js  package.json  vite.config.js
vite/src/: base.css  reset.css  style.css
